1.3.1: Build with Java 8 instead